[package]
name = "searchnos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.5.0-alpha.1"
env_logger = "0.11.2"
log = "0.4.0"
nostr-sdk = "0.43.0"
tokio = { version = "1", features = ["full"] }
serde = "~1"
serde_json = "~1"
axum = { version = "0.6.7", features = ["ws", "headers"] }
futures = "0.3"
chrono = { version = "0.4.24", features = ["serde"] }
anyhow = "1.0.70"
rand = "0.9.2"
clap = { version = "4.4.8", features = ["derive", "env"] }
unicode-normalization = "0.1.22"
thiserror = "2.0.16"

[workspace]

members = ["indexer"]
