[package]
name = "searchnos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.44.0"
tokio = { version = "1", features = ["full"] }
serde = "~1"
serde_json = "~1"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
anyhow = "1.0.70"
rand = "0.9.2"
clap = { version = "4.4.8", features = ["derive", "env"] }
unicode-normalization = "0.1.22"
thiserror = "2.0.16"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
searchnos-db = { git = "https://github.com/darashi/searchnos-db.git" }
indicatif = "0.18"
chrono = "0.4"
yawc = { version = "0.2.7", features = ["axum"] }
