[package]
name = "searchnos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.44.1"
tokio = { version = "1", features = ["full"] }
serde = "~1"
serde_json = "~1"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
anyhow = "1.0.101"
rand = "0.10.0"
clap = { version = "4.5.58", features = ["derive", "env"] }
unicode-normalization = "0.1.25"
thiserror = "2.0.18"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
searchnos-db = { git = "https://github.com/darashi/searchnos-db" }
indicatif = "0.18.3"
chrono = "0.4"
yawc = { version = "0.3.3", features = ["axum"] }
