[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.0"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", branch = "master" }
tokio = { version = "1", features = ["full"] }
